--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,9 +4,11 @@
 
   img {
     border-radius: 5px;
+    margin-top: 12.7%;
 
     @media @phone {
       width: 100%;
+      margin-top: 18.5%;
     }
   }
 
