--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,10 @@
   border-bottom: 1px solid @nav-border;
   .flex-column();
   padding: 1% 0 0.5% 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
 
     @media @phone {
         padding: 2% 0 2.5% 0;
